Amélioration du login et inscription. La logique est là... Donc pour le rest sa va avancer plus vite. Surtout qu'on a plus Xamarin vous voyez

--- a/IShop/IShop/IShop.csproj
+++ b/IShop/IShop/IShop.csproj
@@ -194,6 +194,7 @@
       <DependentUpon>DataBaseIShopModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\Dal.cs" />
     <Compile Include="PAIEMENT.cs">
       <DependentUpon>DataBaseIShopModel.tt</DependentUpon>
     </Compile>
